store include rules (also) in 'inc_ie' (IncludeRueset)
... and write them (only) from 'inc_ie' (IncludeRuleset), which can
handle both "include" and "include if exists" rules.

This duplicates storage of include rules because 'include' is still used
and needed at various places that work on/with the include rules.

With this, we get removal of duplicate include lines insinde a profile
in aa-cleanprof "for free" - extend cleanprof_test.in to confirm this.

--- a/utils/test/cleanprof_test.in
+++ b/utils/test/cleanprof_test.in
@@ -17,6 +17,8 @@
 	#include <abstractions/base>
 
 #include  if  exists <foo>
+	#include if exists <abstractions/base>
+	include <abstractions/base>
 
     capability sys_admin,
     audit capability,
