Let aa-cleanprof remove duplicate preamble rules
Technically, this is done in the new function
delete_preamble_duplicates() in ProfileList.

Also add some tests to ensure this works as expected.

--- a/utils/test/cleanprof_test.in
+++ b/utils/test/cleanprof_test.in
@@ -3,6 +3,8 @@
 
 #include  if  exists <tunables/nothing>
 
+  #include if exists <tunables/global>
+  include if exists <tunables/global>
 
 		alias /foo    ->    /bar	,
 
