--- a/libraries/libapparmor/src/Makefile.am
+++ b/libraries/libapparmor/src/Makefile.am
@@ -32,10 +32,13 @@ AA_LIB_AGE = 6
 
 SUFFIXES = .pc.in .pc
 
+COMMONDIR=$(top_srcdir)/../../common/
+include $(COMMONDIR)/Make.rules
+
 BUILT_SOURCES = grammar.h scanner.h af_protos.h
 AM_LFLAGS = -v
 AM_YFLAGS = -d -p aalogparse_
-AM_CFLAGS = -Wall -Wsign-compare -Wmissing-field-initializers -Wformat -Wformat-security -Wunused-parameter -fPIC
+AM_CFLAGS = -Wall $(EXTRA_WARNINGS) -fPIC
 AM_CPPFLAGS = -D_GNU_SOURCE -I$(top_srcdir)/include/
 scanner.h: scanner.l
 	$(LEX) -v $<
