Define abi when checking abstractions
This fixes lots of warnings like

```
*** Checking abstractions from ./apparmor.d/abstractions against apparmor_parser
Warning from stdin (stdin line 1): ../parser/apparmor_parser: File 'stdin' missing feature abi, falling back to default policy feature abi
Warning from stdin ([...]/profiles/./apparmor.d/abstractions/apparmor_api/change_profile line 9): ../parser/apparmor_parser: [...]/profiles/./apparmor.d/abstractions/apparmor_api/change_profile features abi 'abi/3.0' differes from policy declared feature abi, using the features abi declared in policy
```

--- a/profiles/Makefile
+++ b/profiles/Makefile
@@ -102,7 +102,7 @@ check-parser: local
 	@echo "*** Checking abstractions from ${ABSTRACTIONS_SOURCE} against apparmor_parser"
 	$(Q)for abstraction in ${CHECK_ABSTRACTIONS} ; do \
 	        [ -n "${VERBOSE}" ] && echo "Testing $${abstraction}" ; \
-		echo "#include <tunables/global> profile test { #include <$${abstraction}> }" \
+		echo "abi <abi/3.0>, #include <tunables/global> profile test { #include <$${abstraction}> }" \
 		| ${PARSER} --config-file=../parser/tst/parser.conf -S -b ${PWD}/apparmor.d -I ${PWD} > /dev/null \
 		|| exit 1; \
 	done
