Change `#include` to `include` in active profiles

--- a/profiles/apparmor.d/usr.lib.dovecot.config
+++ b/profiles/apparmor.d/usr.lib.dovecot.config
@@ -11,13 +11,13 @@
 
 abi <abi/3.0>,
 
-#include <tunables/global>
+include <tunables/global>
 
 /usr/lib/dovecot/config {
-  #include <abstractions/base>
-  #include <abstractions/nameservice>
-  #include <abstractions/dovecot-common>
-  #include <abstractions/ssl_keys>
+  include <abstractions/base>
+  include <abstractions/nameservice>
+  include <abstractions/dovecot-common>
+  include <abstractions/ssl_keys>
 
   capability dac_read_search,
   capability dac_override,
