--- a/utils/Makefile
+++ b/utils/Makefile
@@ -80,7 +80,7 @@ check_severity_db: /usr/include/linux/capability.h severity.db
 	# The sed statement is based on the one in the parser's makefile
 	RC=0 ; for cap in $(shell ../common/list_capabilities.sh) ; do \
 	    if !  grep -q -w $${cap} severity.db ; then \
-		echo "Warning! capability $${cap} not found in severity.db" ; \
+		echo "ERROR: capability $${cap} not found in severity.db" ; \
 		RC=1 ; \
 	    fi ;\
 	done ; \
