use aa-logprof --configdir ../utils in profile testsuite
(except if USE_SYSTEM is given)

This also needs an additional parser path in utils/test/logprof.conf,
which then needs an update in test-config.py.

--- a/utils/test/logprof.conf
+++ b/utils/test/logprof.conf
@@ -14,7 +14,7 @@
   inactive_profiledir = ../../profiles/apparmor/profiles/extra
   logfiles = /var/log/audit/audit.log /var/log/syslog /var/log/messages
 
-  parser = ../../parser/apparmor_parser
+  parser = ../../parser/apparmor_parser ../parser/apparmor_parser
   ldd = /usr/bin/ldd
   logger = /bin/logger /usr/bin/logger
 
