--- a/utils/test/logprof.conf
+++ b/utils/test/logprof.conf
@@ -52,7 +52,7 @@
   /usr/lib/YaST2/servers_non_y2/ag_genprof = u
   /usr/lib/YaST2/servers_non_y2/ag_logprof = u
 
-  # these ones shouln't have their own profiles
+  # these ones shouldn't have their own profiles
   /bin/awk      = icn
   /bin/cat      = icn
   /bin/chmod    = icn
