--- a/utils/logprof.conf
+++ b/utils/logprof.conf
@@ -60,7 +60,7 @@
   /usr/lib/YaST2/servers_non_y2/ag_genprof = u
   /usr/lib/YaST2/servers_non_y2/ag_logprof = u
 
-  # these ones shouln't have their own profiles
+  # these ones shouldn't have their own profiles
   /bin/awk      = icn
   /usr/bin/awk  = icn
   /bin/cat      = icn
