parse_profile_data(): Use BooleanRule
... and save rules at the right place (ProfileList) where they actually
get written when writing the profile.

This is also a bugfix - the previous code saved boolean variables at a
wrong place, and they were silently lost when writing the profile.

Extend cleanprof_test.{in,out} to ensure that this doesn't break again.

Also remove boolean_bad_[2-4] from the test-parser-simple-tests.py
exception_not_raised list because these test profiles now get correctly
detected as invalid.

--- a/utils/test/cleanprof_test.in
+++ b/utils/test/cleanprof_test.in
@@ -14,6 +14,10 @@
 
   @{asdf}       =   foo           ""
 
+$foo = false
+
+   $bar    =    true
+
 /usr/bin/a/simple/cleanprof/test/profile {
 	# Just for the heck of it, this comment won't see the day of light
 	#include <abstractions/base>
