parse_profile_start(): get rid of pps_set_profile
This value is True if we are in a child profile (not: hat), but that's
information we get "for free", so there's no need to hand it around.
Besides that, it was wrongly set to False for main profiles (which are
not hats).

Remove the pps_set_profile return value from parse_profile_start(), and
always assume True unless we were parsing a hat. For completeness,
explicitely set it to False when parsing a hat.

To make sure child profiles and hats don't get mixed up, add a child
profile to cleanprof_test.{in,out}.

test-libapparmor-test_multi.py always interpreted foo//bar as being
a hat, therefore explicitely mark them as such. (Technically not really
needed since this is the default, but it helps to make things clear.)

--- a/utils/test/cleanprof_test.in
+++ b/utils/test/cleanprof_test.in
@@ -47,6 +47,10 @@ $foo = false
     dbus send bus=session,
     dbus send bus=session peer=(label=foo),
 
+    profile test_child /foobar {
+            /etc/child rw,
+            }
+
     set rlimit nofile <= 256,
     set rlimit nofile <= 64,
 
