Preserve 'hat' keyword in ProfileStorage
... instead of always writing hats as '^hat'.

When writing a profile, prepending '^' or 'hat' to a hat name moves from
aa.py write_piece() to ProfileStorage.get_header().

Also extend cleanprof_test.* with 'hat bar {...}'.

--- a/utils/test/cleanprof_test.in
+++ b/utils/test/cleanprof_test.in
@@ -68,6 +68,11 @@ $foo = false
 
 	mount options=(rw,suid) /c -> /3,
 
+    hat bar {
+        /etc/passwd r,
+        capability sys_admin,
+        }
+
 	pivot_root oldroot=/mnt/root/old/,
 
 	deny    owner       link       /some/thing    ->     /foo/bar    ,
