CI: always collect test artifacts
The default is to collect them on success, but that's not helpful to
debug failure cases.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,6 +49,7 @@ test-all:
   artifacts:
     paths:
       - utils/test/htmlcov/
+    when: always
 
 # Disabled due to aa-logprof dependency on /sbin/apparmor_parser existing
 #      - make -C profiles check-profiles
